[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "tle-propagator"
version = "0.3.0"
description = "CLI tool for propagating TLE data"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
packages = { find = { include = ["tle_propagator"] } }

[project.scripts]
tle-prop = "tle_propagator.cli:main"